# json-explorer

./: README.md  bumpver.toml  pyproject.toml
docs/: index.md
json_explorer/: __init__.py  analyzer.py  constants.py  main.py
tests/: .pre-commit-config.yaml  helpers.py  mkdocs.yml
